web/src/app/components/shared/job-list-item/job-list-item.component.scss
/**
 * Copyright 2019 The Ground Authors.
 *
 * Licensed under the Apache License, Version 2.0 (the 'License');
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an 'AS IS' BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.job-list-item-container {
  margin-bottom: 8px;
}

.job-tree-node {
  display: flex;
  width: 100%;
  min-width: 0;

  .job-tree-node-label {
    min-width: 0;
    display: flex;
    align-items: center;
    gap: 8px;
    flex: 1;

    .job-name {
      flex: 1;
      min-width: 0;
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
    }
  }
}

.show-properties-icon {
  width: 24px;
  height: 24px;
}

.loi-tree-node {
  display: flex;
  align-items: center;
  border-radius: 24px;
  cursor: pointer;
  min-width: 0;

  .loi-icon {
    flex-shrink: 0;
  }

  .loi-name {
    flex: 1;
    min-width: 0;
    padding-left: 16px;
    white-space: normal;
    word-wrap: break-word;
  }

  .loi-submission-count {
    flex-shrink: 0;
    padding: 0 16px;
  }
}

